<resources>
  <string name="app_name">TargetCaseStudy</string>

  <!-- Credit card validation strings. You do not need to make changes here. -->
  <string name="credit_card_payment_title">Credit Card Payment</string>
  <string name="credit_card_payment_subtitle">Note: you do NOT need to enter real data</string>
  <string name="submit">Submit</string>
  <string name="cancel">Cancel</string>
  <string name="credit_card_number_hint">Credit card number</string>
  <string name="product_ship_text">ship</string>
  <string name="product_or_text">or</string>
  <string name="product_image">Product Image</string>
  <string name="add_to_cart">add to cart</string>
  <string name="add_to_list">add to list</string>
  <string name="regular_price_label">Reg:</string>
</resources>
