<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/product_list_item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/product_detail_image_view"
            android:layout_width="@dimen/deal_list_item_image_size"
            android:layout_height="@dimen/deal_list_item_image_size"
            android:layout_margin="16dp"
            android:contentDescription="@string/product_image"
            android:src="@drawable/ic_launcher_foreground" />

        <!-- Text Layouts -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <!-- Title Layout -->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/product_list_item_title_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:textSize="18sp"
                    tools:text="A T-Shirt!" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <!-- Divider Layout -->
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/medium_gray_color"
                android:gravity="center" />

            <!-- Price & Location Layout -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/product_list_item_price_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:maxLength="10"
                    android:ellipsize="end"
                    android:textSize="18sp"
                    tools:text="$100000.00" />

                <!-- Text Arrangement -->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:textSize="14sp"
                        android:text="@string/product_ship_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:textColor="@color/light_gray_color"
                        android:text="@string/product_or_text" />

                    <TextView
                        android:id="@+id/product_list_item_aisle_tv"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/ic_circular_background"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="@color/red_color"
                        tools:text="B1" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </RelativeLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <!-- Divider line -->
    <View
        android:id="@+id/product_list_item_divider_view"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/medium_gray_color" />
</androidx.appcompat.widget.LinearLayoutCompat>
