<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/deal_details_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/details_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

  <androidx.appcompat.widget.LinearLayoutCompat
      android:id="@+id/details_layout"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_marginBottom="1dp"
      android:layout_weight="1"
      android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:orientation="vertical">

      <ImageView
          android:id="@+id/deal_list_item_image_view"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:src="@drawable/ic_launcher_foreground" />

      <androidx.appcompat.widget.LinearLayoutCompat
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_weight="2"
          android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

          <TextView
              android:id="@+id/product_detail_sale_price_tv"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentStart="true"
              android:textColor="@color/red_color"
              android:textSize="24sp"
              android:textStyle="bold"
              tools:text="$8.98" />

          <TextView
              android:id="@+id/reg_price_label"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_toStartOf="@id/product_detail_reg_price_tv"
              android:text="@string/regular_price_label"
              android:textColor="@color/medium_gray_color"
              android:textSize="20sp" />

          <TextView
              android:id="@+id/product_detail_reg_price_tv"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentEnd="true"
              android:textColor="@color/medium_gray_color"
              android:textSize="20sp"
              tools:text="$17.99" />
        </RelativeLayout>

        <TextView
            android:id="@+id/product_detail_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="22sp"
            tools:text="Tiered Lace Tank - Lily Star" />

        <TextView
            android:id="@+id/product_detail_desc_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="6"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            tools:text="This is a description of an item, lalallalalal lalallalal, lallalalalla, lalalalaslkfja;lsdkfja;lwiefojaiwej;faksfjl;aksdjf;oawirjoeiwja;lksdjfa;lskfjoawiefj lskfjd lsdkjf alks laskdfj alskdf jaiwejrowiarjakdj slkdjf aliwefjowaiejflaskdfj laksdjfoawiejf alskdjf aowidfjalskd foawidfjalskdfj alkoawiejf aksd fjoiwejflaksd faliwejfoaskdjfl owaiejflkas dowaiejflaksdjf oawiejfaoiwkdjslkf " />
      </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
  </androidx.appcompat.widget.LinearLayoutCompat>

  <androidx.appcompat.widget.LinearLayoutCompat
      android:id="@+id/list_cart_button_layout"
      android:layout_width="match_parent"
      android:layout_height="75dp"
      android:orientation="horizontal"
      android:weightSum="2">

    <Button
        android:id="@+id/add_to_list_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="@color/gray_color"
        android:background="@color/light_gray_color"
        android:text="@string/add_to_list"
        android:textSize="18sp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/add_to_cart_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="@android:color/white"
        android:background="@color/red_color"
        android:text="@string/add_to_cart"
        android:textSize="18sp"
        android:layout_weight="1" />
  </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>